...
    <string name="serverSettingsView">Server</string>
    <string name="settings_disabled">(not editable while tracking is active)</string>
    <string name="pref_track_basic">Basic</string>
    <string name="pref_track_basic_intro">Specify, how often position updates should be recorded, how the interval should be changed if there are no position changes, and how the data should be stored on the server.</string>
    <string name="pref_track_advanced">Advanced</string>
    <string name="pref_track_advanced_intro">On this page, you can configure properties that are mainly related to error handling and corner cases. For most users, the default values should work fine, but you can change them to meet your specific requirements.</string>
    <string name="pref_min_track_interval">Minimum track interval</string>
    <string name="pref_max_track_interval">Maximum track interval</string>
    <string name="pref_interval_idle_increment">Track interval increment on idle</string>
    <string name="pref_validity_time">Validity time of a location</string>
    <string name="pref_location_update_threshold">Threshold for location updates (m)</string>
    <string name="pref_error_retry_time">Retry time after error</string>
    <string name="pref_gps_timeout">GPS timeout</string>
    <string name="pref_server_uri">Track server URI</string>
    <string name="pref_server_path">Relative path</string>
    <string name="pref_user">User name</string>
    <string name="pref_password">Password</string>
    <string name="pref_btn_save">Save</string>
    <string name="pref_btn_cancel">Cancel</string>
    <string name="pref_err_no_number">The text you entered is not a valid number.</string>
    <string name="pref_err_invalid_duration_component">The field \'$field\' contains an invalid value.</string>
    <string name="pref_err_invalid_duration_components">The following fields contain invalid values: \'%$field\'.</string>
    <string name="lab_track_enabled">Tracking enabled</string>
    <string name="lab_last_location_update">Last location update:</string>
    <string name="lab_last_error">Last error:</string>
    <string name="lab_last_check">Last check:</string>
    <string name="lab_last_distance">Distance: %1$d m</string>

    <string name="time_secs">sec</string>
    <string name="time_minutes">min</string>
    <string name="time_hours">h</string>
    <string name="time_days">d</string>

    <string name="item_center_to_recent">Center to recent</string>
    <string name="item_zoom_tracked_area">Zoom tracked area</string>
    <string name="item_auto_center">Auto center</string>
    <string name="item_update_map">Update</string>

...
    <string name="map_status_empty">no locations</string>
    <string name="map_distance_own">Current distance: %1$d m</string>

    <string name="track_channel_desc">Tracking active notification from LocationTeller</string>
    <string name="track_channel_name">Tracking</string>
    <string name="track_channel_title">Tracking active</string>
    <string name="pref_auto_reset_stats">Reset statistics on start</string>
    <string name="stats_tracking_started">Tracking started</string>
    <string name="stats_tracking_stopped">Tracking stopped</string>
    <string name="stats_tracking_time">Tracking time</string>
    <string name="stats_tracking_total_distance">Total distance (m)</string>
    <string name="stats_tracking_last_distance">Last distance (m)</string>
    <string name="stats_tracking_last_check">Last check</string>
...
    <string name="stats_tracking_speed">Average speed (km/h)</string>
    <string name="stats_tracking_check_count">Check count</string>
    <string name="stats_tracking_update_count">Update count</string>
    <string name="track_reset_stats">Reset statistics</string>
    <string name="pref_offline_storage_size">Size of the offline storage</string>
    <string name="pref_offline_sync_time">Max time to sync offline storage</string>
    <string name="pref_multi_upload_chunk_size">No of uploads per offline sync op</string>
    <string name="pref_basic_settings">Basic</string>
    <string name="pref_advanced_settings">Advanced</string>
    <string name="map_distance">Current distance: %d m</string>
    <string name="item_update_my_location">Update my location</string>
    <string name="item_center_to_my_location">Center to my location</string>
    <string name="pref_max_speed_increase">Maximum speed increase factor</string>
    <string name="pref_walking_speed">Average walking speed (km/h)</string>
    <string name="pref_rec_update_interval">Update interval</string>
    <string name="pref_rec_fade">Fade out old positions</string>
    <string name="pref_rec_fade_fast">Fast fade out</string>
    <string name="pref_rec_fade_strong">Strong fade out</string>
    <string name="pref_rec_center_new">Auto-center newest position</string>
    <string name="perm_location_rationale">This app uses the permission to retrieve the current location for two purposes:\n\nWhen used as sender, the location needs to be retrieved, so that it can be published. Without this permission, the whole sender part is dysfunctional.\n\nWhen used as receiver, access to the current location is needed only for the functionality to show the own position in t
...
